# bench-sampler

./: CMakeLists.txt  LICENSE  README.md
resources/icons/: bench_sampler_icon.icns
src/app/: BenchPalette.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginScanWindow.cpp  PluginScanWindow.h  WaveformOverview.cpp  WaveformOverview.h
src/model/: SampleBenchModel.cpp  SampleBenchModel.h
tests/: BenchPaletteTests.cpp  BenchRenderModelTests.cpp  SampleBenchModelTests.cpp  TestAssert.h
